# chuchu-scrapper

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.rst  pyproject.toml  requirements-lint.txt
.github/workflows/: build.yml  lint.yml
chuchu_scrapper/: __init__.py  main.py  scrapper.py
chuchu_scrapper/parsers/: __init__.py  imageparser.py  linkparser.py  textparser.py
modules/: myparserlib.py
scripts/: lint-scrapper.sh
tests/: __init__.py  test_chuchu_scraper.py  test_imageparser.py  test_linkparser.py  test_scraper.py  test_textparser.py
tests/fixtures/: sample.html
