[project]
name = "chuchu-scrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Egbewatt Nkongho",email = "egbewattnkonghob@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=24.10.0,<25.0.0)",
    "isort (>=5.13.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
