[tool.poetry]
name = "chuchu-scrapper"
version = "0.1.0"
description = "A CLI scrapper application."
readme = "README.md"
authors = [
    "Egbewatt Nkongho <egbewattnkonghob@gmail.com>"
]

packages = [
    { include = "chuchu_scrapper" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core==1.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "chuchu_scrapper.main:run"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
black = "^25.1.0"
isort = "^6.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
requests-mock = "^1.12.1"
pytest = "^8.3.5"
